tests/NormalTests/paczka1/small_fuzzy/82957513.err
Error in line 1: a4jrpCHctHT A887 64,0
Error in line 3: a4jrpCHctHT S610 93,8
